# opengl_breakout_2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_project.bat
include/: ball_object.h  game.h  game_level.h  game_object.h  particle_generator.h  post_processor.h  powerup.h  resource_manager.h  shader.h  sprite_renderer.h  text_renderer.h  texture.h
resource/shader/: 2.txt  particle.vs
src/: ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp  main.cpp  particle_generator.cpp  post_processor.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  text_renderer.cpp  texture.cpp
